# agentes-ia-agno

./: .env.example  .gitignore  0_llm_call.py  11_researcher.py  12_analista.py  13_own_tools.py  21_pdf_agent.py  31_memory.py  41_teams.py  AgenteMaestro.py  INICIAR_MAESTRO.bat  pyproject.toml  requirements.txt  vercel.json
.agent/skills/analise-financeira/: SKILL.md
.agent/skills/analise-pdf/: SKILL.md
.agent/skills/conversao-dados/: SKILL.md
.agent/skills/criador-agentes/: SKILL.md
.agent/skills/escrita-profissional/: SKILL.md
.agent/skills/memoria-contexto/: SKILL.md
.agent/skills/pesquisa-web/: SKILL.md
.agent/skills/python-executor/: SKILL.md
.claude/skills/algorithmic-art/: SKILL.md
.claude/skills/brand-guidelines/: SKILL.md
.claude/skills/canvas-design/: SKILL.md
.claude/skills/claude-api/: SKILL.md
.claude/skills/doc-coauthoring/: SKILL.md
.claude/skills/docx/: SKILL.md
.claude/skills/frontend-design/: SKILL.md
.claude/skills/internal-comms/: SKILL.md
.claude/skills/mcp-builder/: SKILL.md
.claude/skills/pdf/: SKILL.md
.claude/skills/pptx/: SKILL.md
.claude/skills/skill-creator/: SKILL.md
.claude/skills/slack-gif-creator/: SKILL.md
AgenteMaestro/: .env.example  INICIAR.bat  README.md  agent.py  main.py  pyproject.toml
AgenteMaestro/extension/: background.js  content.js  popup.html  popup.js
AgenteMaestro/tools/: __init__.py  agent_factory.py  python_executor.py  skill_manager.py  vscode_tool.py
api/: index.py
extension/: manifest.json
painel/: app.js  index.html  server.py  style.css
(+4 files in other folders)
