[project]
name = "curso-agno"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.6.3",
    "duckduckgo-search>=7.1.0",
    "fastapi>=0.115.0",
    "groq>=0.0.1",
    "openai>=1.0.0",
    "pypdf>=5.0.0",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "ddgs>=0.1.0",
    "setuptools",
]
